--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,5 @@
 # Groq API Configuration
+# This is only used by Netlify Functions locally
+# In production, set this in Netlify Dashboard → Site settings → Environment variables
 # Get your API key from: https://console.groq.com/keys
-API_KEY=your_groq_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
