--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "netlify dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify:dev": "netlify dev",
+    "netlify:build": "vite build"
   },
   "dependencies": {
-    "groq-sdk": "^0.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.8.2",
     "@types/node": "^22.14.0",
+    "groq-sdk": "^0.7.0",
+    "netlify-cli": "^17.37.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
